--- a/config/database.yml
+++ b/config/database.yml
@@ -26,5 +26,6 @@ test:
 production:
   <<: *default
   database: aw0111_deptest_amazonweb_production
-  username: amazonweb
-  password: <%= ENV['AMAZONWEB_DATABASE_PASSWORD'] %>
+  username: root
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
